cloudbeaver/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      volumes:
        - name: cloudbeaver
          persistentVolumeClaim:
            claimName: cloudbeaver
      containers:
        - name: cloudbeaver
          image: quay.io/operate-first/cloudbeaver:21.0.5
          ports:
            - containerPort: 8978
              name: web
          command:
            - ./run-server.sh
          volumeMounts:
            - mountPath: "/opt/cloudbeaver/workspace"
              name: cloudbeaver
            - mountPath: "/opt/cloudbeaver/logs"
              name: cloudbeaver
            - mountPath: "/.eclipse"
              name: cloudbeaver
          resources:
            limits:
              cpu: 1
              memory: 2Gi
            requests:
              cpu: 512m
              memory: 500Mi
