cloudbeaver/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cloudbeaver
  labels:
    app: cloudbeaver
spec:
  to:
    kind: Service
    name: cloudbeaver
  port:
    targetPort: web
